feat: add sql report and game by name queries in graphql
